[gd_scene load_steps=12 format=3 uid="uid://c573gs43de5yg"]

[ext_resource type="Material" uid="uid://xyoosb4c2hv" path="res://assets/prototype/prototype-materials/black_checker.tres" id="1_asm31"]
[ext_resource type="Script" uid="uid://bc3qgyx7xln34" path="res://scenes/visualizations/spring/scaler_pivot.gd" id="1_fd6fd"]
[ext_resource type="Material" uid="uid://cpmuuamd5vk1q" path="res://assets/prototype/prototype-materials/green.tres" id="2_fd6fd"]
[ext_resource type="Script" uid="uid://bemlblgccrm0t" path="res://scenes/visualizations/spring/2d_rest_draw.gd" id="2_qiwiv"]
[ext_resource type="Script" uid="uid://syy8iqr14jie" path="res://scenes/visualizations/spring/controller.gd" id="5_m67vi"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qiwiv"]
sky_top_color = Color(0.956587, 0.984375, 0.842102, 1)
sky_horizon_color = Color(0.407843, 0.407843, 0.407843, 1)
sky_curve = 1.28613
ground_bottom_color = Color(0.367188, 0.367188, 0.367188, 1)
ground_horizon_color = Color(0.407843, 0.407843, 0.407843, 1)

[sub_resource type="Sky" id="Sky_gy3sr"]
sky_material = SubResource("ProceduralSkyMaterial_qiwiv")

[sub_resource type="Environment" id="Environment_rrc7p"]
background_mode = 2
sky = SubResource("Sky_gy3sr")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m67vi"]
radius = 0.08
height = 1.1

[sub_resource type="SphereShape3D" id="SphereShape3D_fd6fd"]
radius = 0.39791

[sub_resource type="CylinderMesh" id="CylinderMesh_fd6fd"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.15

[node name="Node3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 13.3866, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="DirectionalLight3D"]
environment = SubResource("Environment_rrc7p")

[node name="SpringRoot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Pivot" type="Marker3D" parent="SpringRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
gizmo_extents = 0.43
script = ExtResource("1_fd6fd")

[node name="SpringMesh" type="MeshInstance3D" parent="SpringRoot/Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0750057, -0.5, 0)
material_override = ExtResource("2_fd6fd")
mesh = SubResource("CapsuleMesh_m67vi")

[node name="WheelRB" type="RigidBody3D" parent="SpringRoot"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.021, -1, 0)
gravity_scale = 0.0
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpringRoot/WheelRB"]
shape = SubResource("SphereShape3D_fd6fd")

[node name="WheelMesh" type="MeshInstance3D" parent="SpringRoot/WheelRB"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.035, 0)
material_override = ExtResource("1_asm31")
mesh = SubResource("CylinderMesh_fd6fd")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0.243704, 0)
projection = 1
size = 2.0
far = 100.0

[node name="RestPosLabel" type="Label3D" parent="."]
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0.266088, 0.149354, 1.52603)
pixel_size = 0.0035
no_depth_test = true
text = "Rest position"

[node name="Label3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0.266088, 0.0535832, 1.1191)
pixel_size = 0.0035
no_depth_test = true
text = "64
"

[node name="DampLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0.712452, 0.979836, -0.95515)
pixel_size = 0.0035
no_depth_test = true
modulate = Color(0.460938, 0.532532, 1, 1)
text = "Damping: 10.0"
font_size = 42
horizontal_alignment = 0

[node name="StrengthLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0.712452, 1.1138, -0.95515)
pixel_size = 0.0035
no_depth_test = true
modulate = Color(1, 0.296875, 0.296875, 1)
text = "Strength: 100.0
"
font_size = 42
horizontal_alignment = 0

[node name="HooksLaw" type="Label3D" parent="."]
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0.712452, -0.471993, 1.29403)
pixel_size = 0.0035
no_depth_test = true
text = "Force =  "
horizontal_alignment = 0

[node name="StrengthLabel3" type="Label3D" parent="HooksLaw"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.448024, 0, 0)
pixel_size = 0.0035
no_depth_test = true
modulate = Color(1, 0.296875, 0.296875, 1)
text = "(SpringStrength * Offset)
"
horizontal_alignment = 0

[node name="DampLabelForce" type="Label3D" parent="HooksLaw"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.83202, 0, 1.19209e-07)
visible = false
pixel_size = 0.0035
no_depth_test = true
modulate = Color(0.462745, 0.533333, 1, 1)
text = "- (DampingStrength * RelativeSpeed)
"
horizontal_alignment = 0

[node name="LinesDraw" type="Node2D" parent="."]
script = ExtResource("2_qiwiv")

[node name="Controller" type="Node3D" parent="."]
script = ExtResource("5_m67vi")
spring_strengh = 200.0
